# thesis-rag

./: .gitignore  docker-compose.yml  pyproject.toml
scripts/: add_video.py  build_events.py  chunk_video.py  index_chunks.py  transcribe_video.py
videorag/: logging.py
videorag/config/: settings.py
videorag/db/: base.py  session.py
videorag/input/: paths.py  registry.py  select_video.py
videorag/pipeline/: asr_transcription.py  chunk_events.py  events_builder.py  video_registry.py
