[project]
name = "thesis-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlx-whisper>=0.4.3",
    "psycopg>=3.3.2",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
    "whisperx>=3.7.4",
]
